I think I've resolved the things I wanted to tackle without stress. 1.) I've added a conditional statement that I hope will detect mobile displays and turn off the color shifting feature on the navigation bar. 2.) The 404.html page is now mobile friend. 3.) The nojavascript.html file was added. I'm still not sure if I'll use it since most of the site is operational without it. 4.) I'm not sure if I resolved the og image issue. From all the examples online og images only work with https links so I added the image to imgur and linked to it with the direct link. Fingers crossed.

--- a/css/obsolete-browser.css
+++ b/css/obsolete-browser.css
@@ -109,3 +109,34 @@ b{
     position: absolute;
     bottom: 0;
   }
+
+  @media (max-width: 768px) {
+    #browsers{
+      flex-wrap: wrap;
+    }
+  }
+
+  @media (max-width: 768px) {
+    #browsers div{
+        margin: 0px 10px 5% 10px;
+    }
+  }
+
+
+  @media (max-width: 768px) {
+    #obsolete-browser-content{
+      width: 95%;
+    }
+  }
+
+  @media (max-width: 768px) {
+    #obsolete-browser-content p{
+      width: 95%;
+    }
+  }
+
+  @media (max-width: 768px) {
+    #copyleft{
+        position: static;
+    }
+  }
